RIA-6133 Enable existing notifications for AO and HO when citizen submits FTPA